# cargo-features = ["codegen-backend", "profile-rustflags", "trim-paths"]
cargo-features = ["profile-rustflags", "trim-paths"]


[package]
name = "hot_loops"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.99"
# crossbeam = "0.8.4"
num_cpus = "1.17.0"
parking_lot = { version = "0.12.4", features = ["arc_lock"] }


[profile.dev]
opt-level = 1
codegen-units = 256
incremental = true
rustflags = ["-Zthreads=16"]
# codegen-backend = "cranelift"
debug = "line-tables-only"
debug-assertions = true
overflow-checks = true
strip = "none"             # true | false | "none" | "symbols" | "debuginfo" ## Leave off @ w. THIS IS NOT OBFUSCATION.
panic = "abort"            # "unwind" | "abort"
lto = "off"                # "false" ### # true | false | "off" | "thin" | "fat" ## Can't use with cranelift yet
trim-paths = "none"
# tune-cpu         = "native"

######################################################################################################################################################

[profile.release]
opt-level = 2
codegen-units = 1
incremental = false
rustflags = ["-Zthreads=16"]
# codegen-backend = "cranelift"          # May break deps.
debug = "none"
debug-assertions = false
overflow-checks = false                # debatable
strip = true
panic = "abort"                        # "unwind" | "abort"
lto = "off"                            # true | false | "off" | "thin" | "fat" ## Can't use with cranelift yet
trim-paths = ["diagnostics", "object"]
# tune-cpu = "native"


[profile.dev.package."*"]
inherits = "release"
# codegen-backend = "cranelift" #### May break deps. for external crates

[profile.release.package."*"]
inherits = "release"
strip = true

# codegen-backend = "cranelift" #### May break deps. for external crates??????

######################################################################################################################################################
######################################################################################################################################################
